--- a/Final Report/main.tex
+++ b/Final Report/main.tex
@@ -26,7 +26,7 @@
 \def\confYear{2024}
 
 %%%%%%%%% TITLE - PLEASE UPDATE
-\title{\LaTeX\ Proposal for \confName~}
+\title{\LaTeX\ Final Report for \confName~ Group 1}
 %%%%%%%%% AUTHORS - PLEASE UPDATE
 \author{Murtadha Marzouq\\
 {\tt\small Graduate Student}\\
@@ -71,11 +71,7 @@ Yuepei Yu\\
 \input{sec/7_conclusion}
 \input{sec/8_bib}
 \input{sec/5_team}
-{
-    \small
-    \bibliographystyle{ieeenat_fullname}
-    \bibliography{main}
-}
+
 % WARNING: do not forget to delete the supplementary pages from your submission 
 % \input{sec/X_suppl}
 
