--- a/Final Report/sec/5_team.tex
+++ b/Final Report/sec/5_team.tex
@@ -1,11 +1,11 @@
 \graphicspath{ {images} }
 
 \section{Team}
-    \includegraphics[width=0.1\textwidth]{Murtadha.jpg}\\ \textbf{Murtadha Marzouq}\\ \href{https://webpages.charlotte.edu/mmarzouq/English/Resume.pdf}{\underline{Resume Link}}\\
-   \includegraphics[width=0.1\textwidth]{Param.png}\\ \textbf{Param Patel}\\  \href{https://drive.google.com/file/d/13jr45PMGy9iJG0CavpYmuiN5SDwGgygj/view?usp=sharing}{\underline{Resume Link}}\\
-\includegraphics[width=0.1\textwidth]{Haochen.png}\\     \textbf{Haochen Ye}\\ \href{https://drive.google.com/file/d/1YOZvJANmngCAai1OxXm28a_7XmKGmpH1/view?usp=sharing}{\underline{Resume Link}}\\
-\includegraphics[width=0.1\textwidth]{Sam.png}\\     \textbf{Sam Aldehayyat}\\ \href{https://drive.google.com/file/d/14jBT5AZ_GzdElLh-0LSXzP7AxgjMu0wa/view?usp=sharing}{\underline{Resume Link}}\\
-\includegraphics[width=0.1\textwidth]{Yuepei.png}\\     \textbf{Yuepei Yu}\\ \href{https://drive.google.com/file/d/1xcBhl6kxY1gQZsCjADVlJvvDVYBJLoSo/view?usp=sharing}{\underline{Resume Link}}\\
+\textbf{Murtadha Marzouq}\\   \includegraphics[width=0.1\textwidth]{Murtadha.jpg}\\  \href{https://webpages.charlotte.edu/mmarzouq/English/Resume.pdf}{\underline{Resume Link}}\\
+    \textbf{Param Patel}\\ \includegraphics[width=0.1\textwidth]{Param.png}\\   \href{https://drive.google.com/file/d/13jr45PMGy9iJG0CavpYmuiN5SDwGgygj/view?usp=sharing}{\underline{Resume Link}}\\
+    \textbf{Haochen Ye}\\ \includegraphics[width=0.1\textwidth]{Haochen.png}\\    \href{https://drive.google.com/file/d/1YOZvJANmngCAai1OxXm28a_7XmKGmpH1/view?usp=sharing}{\underline{Resume Link}}\\
+    \textbf{Sam Aldehayyat}\\ \includegraphics[width=0.1\textwidth]{Sam.png}\\      \href{https://drive.google.com/file/d/14jBT5AZ_GzdElLh-0LSXzP7AxgjMu0wa/view?usp=sharing}{\underline{Resume Link}}\\
+    \textbf{Yuepei Yu}\\ \includegraphics[width=0.1\textwidth]{Yuepei.png}\\      \href{https://drive.google.com/file/d/1xcBhl6kxY1gQZsCjADVlJvvDVYBJLoSo/view?usp=sharing}{\underline{Resume Link}}\\
 This team had been build with the following fellowship in minds:\\
 1. Liberté, Egalité, Fraternité\\
 2. Diversity and Inclusion\\
