--- a/Final Report/sec/8_bib.tex
+++ b/Final Report/sec/8_bib.tex
@@ -1,12 +1,12 @@
 \section{Bibliography}
 \label{sec:bibliography}
 \begin{enumerate}
-    \item \label{bib:1} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf}
-    \item \label{bib:2} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf}
-    \item \label{bib:3} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf}
-    \item \label{bib:4} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf}
-    \item \label{bib:5} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf}
-    \item \label{bib:6} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf}
-    \item \label{bib:7} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf} 
+    \item \label{bib:1} \textit{Caya, M. V. C., Caringal, M. E. C.,  Manuel, K. A. C. (2021). Tongue Biometrics Extraction Based on YOLO Algorithm and CNN Inception. In 2021 IEEE 13th International Conference on Humanoid, Nanotechnology, Information Technology, Communication and Control, Environment, and Management (HNICEM)}. \url{https://doi.org/10.1109/hnicem54116.2021.9732037}    \item \label{bib:2} \textit{A Survey of Computer Vision-Based Human Motion Capture}. \url{https://arxiv.org/pdf/2001.09099.pdf}
+    \item \label{bib:2} \textit{Karam, L. J.,  Zhu, T. (2015). Quality labeled faces in the wild (QLFW): a database for studying face recognition in real-world environments. In B. E. Rogowitz, T. N. Pappas,  H. de Ridder (Eds.), IST/SPIE Electronic Imaging. SPIE.}. \url{https://doi.org/10.1117/12.2080393}
+    \item \label{bib:3} \textit{Lin, T.-Y., Maire, M., Belongie, S., Hays, J., Perona, P., Ramanan, D., Dollár, P.,  Zitnick, C. L. (2014). Microsoft COCO: Common Objects in Context. In Computer Vision – ECCV 2014 (pp. 740–755). Springer International Publishing.}. \url{https://doi.org/10.1007/978-3-319-10602-1_48}
+    \item \label{bib:4} \textit{Chuyi Li and Lulu Li and Yifei Geng and Hongliang Jiang and Meng Cheng and Bo Zhang and Zaidan Ke and Xiaoming Xu and Xiangxiang Chu. (2023). YOLOv6 v3.0: A Full-Scale Reloading. In 2023 4th International Conference on Intelligent Computing and Human-Computer Interaction (ICHCI). IEEE}. \url{https://arxiv.org/abs/2301.05586}
+    \item \label{bib:5} \textit{Yuan, Y., Chen, X.,  Wang, J. (2020). Object-Contextual Representations for Semantic Segmentation. In Computer Vision – ECCV 2020 (pp. 173–190). Springer International Publishing}. \url{https://doi.org/10.1007/978-3-030-58539-6_11}
+    \item \label{bib:6} \textit{Godil, A., Shackleford, W., Shneier, M., Bostelman, R.,  Hong, T. (2014b). Performance Metrics for Evaluating Object and Human Detection and Tracking Systems. National Institute of Standards and Technology}. \url{https://doi.org/10.6028/nist.ir.7972}
+    \item \label{bib:7} \textit{Misbah Ahmad, Imran Ahmed, and Awais Adnan, “Overhead View Person Detection Using YOLO”, “10th Annual Ubiquitous Computing, Electronics  Mobile Communication Conference (UEMCON), IEEE”}. \url{https://ieeexplore.ieee.org/document/8992980}
 \end{enumerate}
 
